--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ add_executable(compiler
         src/ast/statement/assign/assign.c src/ast/statement/assign/assign.h
         src/ast/expression/expression.h
         src/ast/expression/lvalue/lvalue.h
-        src/ast/expression/rvalue/rvalue.h
+        src/ast/expression/rvalue/rvalue.h src/ast/expression/rvalue/rvalue.c
         src/ast/expression/lvalue/variableReference/variableReference.c src/ast/expression/lvalue/variableReference/variableReference.h
         src/ast/expression/lvalue/arrayElementReference/arrayElement.c src/ast/expression/lvalue/arrayElementReference/arrayElement.h
         src/symbolTable/symbol/type/symbolTable.c
@@ -27,4 +27,7 @@ add_executable(compiler
         src/ast/statement/declare/declare.c src/ast/statement/declare/declare.h
         src/ast/expression/rvalue/intLiteral/intLiteral.c src/ast/expression/rvalue/intLiteral/intLiteral.h
         src/ast/expression/rvalue/doubleLiteral/doubleLiteral.c src/ast/expression/rvalue/doubleLiteral/doubleLiteral.h
-        src/ast/statement/if/if.c src/ast/statement/if/if.h src/ast/statement/while/while.c src/ast/statement/while/while.h src/ast/statement/print/print.c src/ast/statement/print/print.h src/ast/expression/rvalue/rvalue.c)
+        src/ast/statement/if/if.c src/ast/statement/if/if.h
+        src/ast/statement/while/while.c src/ast/statement/while/while.h
+        src/ast/statement/print/print.c src/ast/statement/print/print.h
+        )
