--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,10 @@
 [package]
-name = "toylang"
+name = "slang"
 version = "0.1.0"
 authors = ["longfangsong <longfangsong@icloud.com>"]
 edition = "2018"
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 [dependencies]
 nom = "5.0.1"
-typename = "0.1.1"
-num = "0.2"
-lazy_static = "1.3.0"
