--- a/components/ir/Cargo.toml
+++ b/components/ir/Cargo.toml
@@ -1,15 +1,11 @@
 [package]
-name = "toylang"
+name = "ir"
 version = "0.1.0"
 authors = ["longfangsong <longfangsong@icloud.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-[workspace]
-members = [
-    'components/ir',
-    'components/parser',
-    'components/risc-v',
-]
 
 [dependencies]
+nom = "5.1.2"
+sum_type = "0.2.0"
