--- a/components/parser/Cargo.toml
+++ b/components/parser/Cargo.toml
@@ -1,15 +1,10 @@
 [package]
-name = "toylang"
+name = "parser"
 version = "0.1.0"
 authors = ["longfangsong <longfangsong@icloud.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-[workspace]
-members = [
-    'components/ir',
-    'components/parser',
-    'components/risc-v',
-]
 
 [dependencies]
+ir = { path = "../ir" }
