--- a/components/risc-v/Cargo.toml
+++ b/components/risc-v/Cargo.toml
@@ -1,15 +1,16 @@
 [package]
-name = "toylang"
+name = "risc-v"
 version = "0.1.0"
 authors = ["longfangsong <longfangsong@icloud.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-[workspace]
-members = [
-    'components/ir',
-    'components/parser',
-    'components/risc-v',
-]
 
 [dependencies]
+lazy_static = "1.4.0"
+serde = { version = "1.0.116", features = ["derive"] }
+serde_yaml = "0.8.13"
+ir = { path = "../ir" }
+
+[dev-dependencies]
+nom = "5.1.2"
