--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,11 @@ authors = ["longfangsong <longfangsong@icloud.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-[workspace]
-members = [
-    'components/ir',
-    'components/parser',
-    'components/risc-v',
-]
 
 [dependencies]
+nom = "5.1.2"
+sum_type = "0.2.0"
+
+[[bin]]
+name = "backend-riscv"
+path = "src/riscv/main.rs"
