--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ sum_type = "0.2.0"
 lazy_static = "1.4.0"
 serde = { version = "1.0.116", features = ["derive"] }
 serde_yaml = "0.8.13"
+paste = "1.0.1"
 
 [[bin]]
 name = "backend-riscv"
