--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,8 @@ lazy_static = "1.4.0"
 serde = { version = "1.0.116", features = ["derive"] }
 serde_yaml = "0.8.13"
 paste = "1.0.1"
+structopt = "0.3.19"
 
 [[bin]]
-name = "backend-riscv"
-path = "src/riscv/main.rs"
+name = "parser"
+path = "src/parser.rs"
