--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ serde = { version = "1.0.116", features = ["derive"] }
 serde_yaml = "0.8.13"
 paste = "1.0.1"
 structopt = "0.3.19"
+union_type = "0.1.0"
 
 [[bin]]
 name = "parser"
@@ -22,3 +23,7 @@ path = "src/code_parser.rs"
 [[bin]]
 name = "ir_lower"
 path = "src/ir_parser.rs"
+
+[[bin]]
+name = "riscv-backend"
+path = "src/riscv-backend.rs"
