--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,29 +1,11 @@
 [package]
 name = "toylang"
 version = "0.1.0"
-authors = ["longfangsong <longfangsong@icloud.com>"]
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-nom = "5.1.2"
-sum_type = "0.2.0"
-lazy_static = "1.4.0"
-serde = { version = "1.0.116", features = ["derive"] }
-serde_yaml = "0.8.13"
-paste = "1.0.1"
-structopt = "0.3.19"
-union_type = "0.1.0"
-
-[[bin]]
-name = "parser"
-path = "src/code_parser.rs"
-
-[[bin]]
-name = "ir_lower"
-path = "src/ir_parser.rs"
-
-[[bin]]
-name = "riscv-backend"
-path = "src/riscv-backend.rs"
+enum_dispatch = "0.3.8"
+nom = "7.1.1"
+paste = "1.0.9"
