--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+either = "1.8.0"
 enum_dispatch = "0.3.8"
 nom = "7.1.1"
 paste = "1.0.9"
